refactor: Poll controller search(filter) method's parameters moved to class